[package]
name = "create-device"
version = "0.1.0"
authors = ["NickelCoating <68106485+NickelCoating@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.22.2"
#winapi = "0.3.9"
ash = "0.31.0"
ash-window = "0.5.0"
raw-window-handle = "0.3"